# my-backend-to-rinha

./: .gitignore  README.md  docker-compose.yml  nginx.conf
.github/workflows/: deploy.yml
b-rs/: .env  Cargo.toml  Dockerfile
b-rs/src/: endpoint.rs  main.rs  payment.rs  use_case.rs
ld-tr/: .env  Cargo.toml  Dockerfile
ld-tr/src/: balance_logic.rs  check_health.rs  endpoint.rs  info.rs  main.rs  payment.rs  queue.rs
