[package]
name = "ld-tr"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12.22", features = ["json", "rustls-tls"] }
actix-web = "4.11.0"
dotenvy = "0.15.7"
serde = { version = "1.0.218", features = ["derive"] }
once_cell = "1.21.3"
tokio = {version = "1.46.1", features = ["time"]}
uuid = { version = "1.14.0", features = ["v4", "serde"] }
chrono = {version = "0.4.41", features = ["serde"]}
serde_json = "1.0.140"
